--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "expo-crypto": "~13.0.2"
+    "expo-crypto": "~13.0.2",
+    "expo-mail-composer": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
