--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
     "date-fns": "^4.1.0",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
     "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-local-authentication": "~14.0.1",
+    "expo-mail-composer": "~13.0.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^11.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -43,9 +46,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "react-native-web": "~0.19.10",
-    "expo-crypto": "~13.0.2",
-    "expo-mail-composer": "~13.0.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
