--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wordle-clone",
+  "name": "devdactic-wordle",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -15,50 +15,52 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^2.2.30",
+    "@clerk/clerk-expo": "^2.6.13",
     "@expo-google-fonts/frank-ruhl-libre": "^0.2.3",
-    "@expo/vector-icons": "^14.0.3",
-    "@gorhom/bottom-sheet": "^4.6.4",
+    "@expo/vector-icons": "^14.0.4",
+    "@gorhom/bottom-sheet": "^5.0.6",
     "@jsamr/counter-style": "^2.0.2",
     "@jsamr/react-native-li": "^2.3.1",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
     "date-fns": "^4.1.0",
-    "expo": "~51.0.28",
-    "expo-constants": "~16.0.2",
-    "expo-crypto": "~13.0.2",
-    "expo-dev-client": "~4.0.28",
-    "expo-font": "~12.0.10",
-    "expo-linking": "~6.3.1",
-    "expo-local-authentication": "~14.0.1",
-    "expo-mail-composer": "~13.0.1",
-    "expo-router": "~3.5.23",
-    "expo-secure-store": "~13.0.2",
-    "expo-splash-screen": "~0.27.6",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
-    "firebase": "^11.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
-    "react-native-web": "~0.19.10"
+    "expo": "~52.0.25",
+    "expo-blur": "~14.0.2",
+    "expo-constants": "~17.0.4",
+    "expo-dev-client": "~5.0.9",
+    "expo-font": "~13.0.3",
+    "expo-haptics": "~14.0.1",
+    "expo-linking": "~7.0.4",
+    "expo-local-authentication": "^15.0.2",
+    "expo-mail-composer": "^14.0.2",
+    "expo-router": "~4.0.16",
+    "expo-splash-screen": "~0.29.20",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-web-browser": "~14.0.2",
+    "firebase": "^11.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.6",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-mmkv": "^3.2.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.1",
+    "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
+    "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.79",
-    "@types/react-native": "^0.72.8",
-    "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.4.0",
-    "jest-expo": "^51.0.0",
-    "react-native-svg-transformer": "^1.5.0",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "@types/react": "~18.3.12",
+    "@types/react-test-renderer": "^18.3.0",
+    "jest": "^29.2.1",
+    "jest-expo": "~52.0.3",
+    "react-test-renderer": "18.3.1",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
